Bug 508530 - Bizarre "error deleting calendar item" message after removing google account
Summary: Bizarre "error deleting calendar item" message after removing google account
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 6.4.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-20 18:06 UTC by Mel
Modified: 2025-08-30 14:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.1
Sentry Crash Report:


Attachments
A screenshot of more than a handful of "Error while trying to delete calendar items. Error was: No items found" message boxes overlaid on a desktop. KOrganizer is seen behind the trail of message boxs (1.76 MB, image/png)
2025-08-20 18:06 UTC, Mel
Details
A small portion of the contents of journalctl during the time of the bug. (7.36 KB, text/plain)
2025-08-20 18:36 UTC, Mel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mel 2025-08-20 18:06:19 UTC
Created attachment 184293 [details]
A screenshot of more than a handful of "Error while trying to delete calendar items. Error was: No items found" message boxes overlaid on a desktop. KOrganizer is seen behind the trail of message boxs

Hello!

I tried KOrganizer out, decided that it wasn't for me and removed my Google account with several connected calendars.

As soon as I did that I got more than a handful (screenshot attached) of "Error while trying to delete calendar items. Error was: No items found". The calendars included public facing and private facing ones. With quite a few events within them.

I assume this was going through and trying to remove each item and was unable to due to credentials from the account I just removed no longer existing. I don't believe any remote calendar events were deleted (thankfully).

I seem to be running KOrganizer 6.4.3, KDE Plasma 6.4.4 , KDE Framework 6.17.0 and Fedora 42.
Comment 1 Allen Winter 2025-08-20 18:29:49 UTC
"removed my Google account with several connected calendars."

can you tell me more about how you did that?  did you go into the calendars list in the bottom left corner and remove the connected calendars one-by-one?  and how did you remove the Google account?  did you remove the account before or after removing the calendars...

more specifics on what you did and in what order will help me reproduce.
Comment 2 Mel 2025-08-20 18:35:38 UTC
(In reply to Allen Winter from comment #1)
> "removed my Google account with several connected calendars."
> 
> can you tell me more about how you did that?  did you go into the calendars
> list in the bottom left corner and remove the connected calendars
> one-by-one?  and how did you remove the Google account?  did you remove the
> account before or after removing the calendars...
> 
> more specifics on what you did and in what order will help me reproduce.

Yep, with KOrganizer freshly opened:
1. Click on Settings -> Configure KOrganizer
2. Land on the General Settings Page
3. Click on Calendars
4. Select the Google account connected (I think this is referred to as a Google workspace account?)
5. Click remove
6. Experience a few dozen or so message boxes

I'll also attach a small log from journalctl when that event happened in a minute.
Comment 3 Mel 2025-08-20 18:36:57 UTC
Created attachment 184294 [details]
A small portion of the contents of journalctl during the time of the bug.
Comment 4 Allen Winter 2025-08-20 18:44:37 UTC
thank you so much.
especially since you don't plan to use KOrganizer it is very nice of you to take the time to report this.
Comment 5 Mel 2025-08-20 19:00:49 UTC
(In reply to Allen Winter from comment #4)
> thank you so much.
> especially since you don't plan to use KOrganizer it is very nice of you to
> take the time to report this.

No worries, happy to help!

I should also add that:
* The google account was given all listed permissions via the google oauth flow. 
* It's an enterprise google account I believe (my work account)
* I experienced a crash earlier (about 30-60 mins prior?) which I submitted via the automatic bug report feature in kde, which you might be able to dig up for more system information / context.

The crash I don't have any real details on unfortunately.
Comment 6 Bug Janitor Service 2025-08-29 15:09:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/korganizer/-/merge_requests/234
Comment 7 Allen Winter 2025-08-30 14:30:59 UTC
Git commit ea1fa686fa6c360233b9a243d283a11ac57d8d14 by Allen Winter.
Committed on 29/08/2025 at 15:05.
Pushed by winterz into branch 'master'.

akonadicollectionview.cpp - quiet the "no items found" popups on delete

When deleting an agent tell the incidencechanger to be quiet
and not display a popup dialog for each and every incidence.

Deleting an agent always succeeds for valid collections and
there is no such thing as deleting in this situation -- all
we're doing is detaching the agent.

M  +2    -1    src/akonadicollectionview.cpp

https://invent.kde.org/pim/korganizer/-/commit/ea1fa686fa6c360233b9a243d283a11ac57d8d14
Comment 8 Allen Winter 2025-08-30 14:31:23 UTC
Git commit 5d4c0ac768dc47c94d8b7fb71238c9c09f61e8de by Allen Winter.
Committed on 30/08/2025 at 14:31.
Pushed by winterz into branch 'release/25.08'.

akonadicollectionview.cpp - quiet the "no items found" popups on delete

When deleting an agent tell the incidencechanger to be quiet
and not display a popup dialog for each and every incidence.

Deleting an agent always succeeds for valid collections and
there is no such thing as deleting in this situation -- all
we're doing is detaching the agent.


(cherry picked from commit ea1fa686fa6c360233b9a243d283a11ac57d8d14)

Co-authored-by: Allen Winter <winter@kde.org>

M  +2    -1    src/akonadicollectionview.cpp

https://invent.kde.org/pim/korganizer/-/commit/5d4c0ac768dc47c94d8b7fb71238c9c09f61e8de