akonadicollectionview.cpp - quiet the "no items found" popups on delete

When deleting an agent tell the incidencechanger to be quiet
and not display a popup dialog for each and every incidence.

Deleting an agent always succeeds for valid collections and
there is no such thing as deleting in this situation -- all
we're doing is detaching the agent.

BUG: 508530